<resources>
    <string name="app_name">wattMap_kakaoapi</string>
    <string name="zoomIn">확대</string>
    <string name="zoomOut">축소</string>
    <string name="up">위</string>
    <string name="down">아래</string>
    <string name="left">왼쪽</string>
    <string name="right">오른쪽</string>
    <string name="loc">내위치</string>
    <string name="locOff">위치해제</string>
    <string name="watthome">와트</string>
    <string name="circleValue">현재 반경</string>
    <string name="circleL1">반경 레벨1</string>
    <string name="circleL2">반경 레벨2</string>
    <string name="circleL3">반경 레벨3</string>
    <string name="circleL4">반경 레벨4</string>
    <string name="circleLR">반경 해제</string>
    <string name="zoom1">줌 레벨 1</string>
    <string name="zoom2">줌 레벨 2</string>
    <string name="zoom3">줌 레벨 3</string>
    <string name="zoom4">줌 레벨 4</string>
    <string name="zoom5">줌 레벨 5</string>
    <string name="imagestop">정지</string>
    <string name="imagestart">이동</string>
    <string name="loc1">마커1</string>
    <string name="loc2">마커2</string>
    <string name="loc3">마커3</string>
    <string name="loc4">마커4</string>
    <string name="loc5">마커5</string>
    <string name="locmarkerdel">마커 삭제</string>
</resources>